--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "gulp-uglify": "~0.2.0",
     "gulp-coffee": "~1.4.0",
     "gulp-coffeelint": "~0.2.0",
-    "gulp-concat": "~2.1.7"
+    "gulp-concat": "~2.1.7",
+    "gulp-mocha": "~0.4.1",
+    "chai": "~1.9.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
